--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -29,7 +29,7 @@
     </div>
     <!--fixed-column-wrap end-->
     <!--column-wrap--> 
-    <div class="column-wrap">
+    <div class="column-wrap dark-bg">
         <!--column-wrap-container -->   
         <div class="column-wrap-container fl-wrap">
             <div class="col-wc_dec">
@@ -39,7 +39,7 @@
                 <div class="pr-bg pr-bg-white"></div>
             </div>
             <!--section--> 
-            <section id="sec1" class="small-padding">
+            <section id="sec1" class="small-padding dark-bg">
                 <div class="container">
                     <!-- <div class="column-wrap-media fl-wrap">
                             <div class="pr-bg pr-bg-white"></div>
