--- a/views/fashionCypher.ejs
+++ b/views/fashionCypher.ejs
@@ -38,7 +38,7 @@
             <div class="col-wc_dec col-wc_dec2">
                 <div class="pr-bg pr-bg-white"></div>
             </div>
-            <section  class="small-padding article">
+            <section  class="small-padding article dark-bg">
                 <div class="container">
                     <div class="split-sceen-content_title fl-wrap">
                         <div class="pr-bg pr-bg-white"></div>
@@ -89,9 +89,9 @@
                 </div>
             </section>
             <!--section end--> 
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div> -->
             <!--section--> 
-            <section  class="small-padding article">
+            <section  class="small-padding article dark-bg">
                 <div class="container">
                     <div class="split-sceen-content_title fl-wrap">
                         <div class="pr-bg pr-bg-white"></div>
@@ -150,9 +150,9 @@
                 </div>
             </section>
             <!--section end-->        
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div> -->
             <!--section--> 
-            <section  class="small-padding article">
+            <section  class="small-padding article dark-bg">
                     <div class="container">
                         <div class="split-sceen-content_title fl-wrap">
                             <div class="pr-bg pr-bg-white"></div>
@@ -207,7 +207,7 @@
                     </div>
                 </section>
                 <!--section end-->      
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div> -->
             <!--section--> 
             <section  class="small-padding article">
                     <div class="container">
