--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,24 +3,57 @@
   <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
-      <div class="item active">
-        <img src="https://pbs.twimg.com/media/EGHYvttU4AAYKb7?format=jpg&name=large" width="100%" class="d-block w-100" alt="...">
+      <!-- <div class="item active">
+        <img src="/images/homebanner.jpeg" width="100%" class="d-block w-100" alt="...">
         <div class="carousel-caption">
           One Image
         </div>
-      </div>
-      <div class="item">
-        <img class="img-responsive" src="http://placehold.it/1200x600/fffccc/000&text=Two" alt="...">
+      </div> -->
+      <div class="item active">
+        <section class="hero-section dark-bg" data-scrollax-parent="true">
+          <div class="hero-canvas-wrap fs-canvas first-tile_load">
+            <!-- <div class="dots gallery__dots" data-dots=""></div> -->
+          </div>
+          <div class="hero-bg">
+            <div class="bg par-elem" data-bg="/images/homebanner.jpeg"
+              data-scrollax="properties: { translateY: '30%' }">
+            </div>
+
+            <!-- <div class="pr-bg">hey</div>
+              <div class="hero-bg-dec"><span> am here</span></div> -->
+          </div>
+          <div class="container">
+            <div class="section-title fl-wrap first-tile_load">
+              <h2>
+                <!-- Upcoming<br /> -->
+                <span style="color: #f76905;">IGC FASHION</span>
+              </h2>
+
+              <div class="section-title_category">
+                <a href="#">CREATE.INSPIRE.SHARE</a> <a href="#">Design</a>
+              </div>
+            </div>
+          </div>
+          <div class="hero-start-link bot-element">
+            <div class="scroll-down-wrap">
+              <div class="mousey">
+                <!-- <div class="scroller">hello</div> -->
+              </div>
+              <span>Scroll Down to discover</span>
+            </div>
+            <a href="#sec1" class="custom-scroll-link color-bg"><i class="fal fa-long-arrow-down"></i></a>
+          </div>
+        </section>
         <div class="carousel-caption">
           Another Image
         </div>
       </div>
-      <div class="item">
+      <!-- <div class="item">
         <img class="img-responsive" src="http://placehold.it/1200x600/fcf00c/000&text=Three" alt="...">
         <div class="carousel-caption">
           Another Image
         </div>
-      </div>
+      </div> -->
     </div>
 
     <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -31,7 +64,10 @@
     </a>
   </div>
 
-  <h3>Collections</h3>
+  <div class="home-title fl-wrap">
+    <!-- <div class="pr-bg pr-bg-white"></div> -->
+    <h3>TITLE</h3>
+  </div>
 
 
   <div id="tabs-container" class="fl-wrap">
@@ -63,167 +99,165 @@
         <!-- gallery-item-->
         <div class="gallery-item" style="height: 367.431px;">
           <div class="grid-item-holder">
-            <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+            <!-- <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
               class="
                                                               fet_pr-carousel-box-media-zoom
                                                               popup-image
-                                                            "><i class="fal fa-search"></i></a>
-            <img
-              src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-              alt="" />
+                                                            "><i class="fal fa-search"></i></a> -->
+            <img src="images/yo2.avif" alt="" />
           </div>
         </div>
         <!-- gallery-item end-->
         <!-- gallery-item-->
         <div class="gallery-item" style="height: 367.431px;">
-          <div class="grid-item-holder">
+          <!-- <div class="grid-item-holder">
             <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
               class="
                                                             fet_pr-carousel-box-media-zoom
                                                             popup-image
-                                                          "><i class="fal fa-search"></i></a>
-            <img
-              src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-              alt="" />
-          </div>
+                                                          "><i class="fal fa-search"></i></a> -->
+          <img src="images/yo3.avif" alt="" />
         </div>
-        <!-- gallery-item end-->
-
-        <!-- portfolio end -->
-        <!-- <h3 class="pr-subtitle mar-top">thi is</h3> -->
-        <p></p>
       </div>
-      <!-- tab-content end-->
+      <!-- gallery-item end-->
+
+      <!-- portfolio end -->
+      <!-- <h3 class="pr-subtitle mar-top">thi is</h3> -->
+      <p></p>
     </div>
-
-
-
-
+    <!-- tab-content end-->
   </div>
 
-  <h3>Collections</h3>
 
 
-  <div class="
+
+</div>
+
+<div class="home-title fl-wrap">
+  <!-- <div class="pr-bg pr-bg-white"></div> -->
+  <h3>TITLE</h3>
+</div>
+
+
+<div class="
                         gallery-items
                         min-pad
                         lightgallery
                        four-column
                         fl-wrap
                       ">
-    <!-- gallery-item-->
-    <div class="gallery-item " style="padding: 5px">
-      <div class="grid-item-holder">
-        <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-          class="
+  <!-- gallery-item-->
+  <div class="gallery-item " style="padding: 5px">
+    <div class="grid-item-holder">
+      <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+        class="
                                                                     fet_pr-carousel-box-media-zoom
                                                                     popup-image
                                                                   "><i class="fal fa-search"></i></a>
-        <img
-          src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-          alt="" />
-      </div>
+      <img
+        src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+        alt="" />
     </div>
-    <!-- gallery-item end-->
-    <!-- gallery-item-->
-    <div class="gallery-item" style="padding: 5px">
-      <div class="grid-item-holder">
-        <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-          class="
+  </div>
+  <!-- gallery-item end-->
+  <!-- gallery-item-->
+  <div class="gallery-item" style="padding: 5px">
+    <div class="grid-item-holder">
+      <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+        class="
                                                                     fet_pr-carousel-box-media-zoom
                                                                     popup-image
                                                                   "><i class="fal fa-search"></i></a>
-        <img
-          src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-          alt="" />
-      </div>
+      <img
+        src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+        alt="" />
     </div>
-    <!-- gallery-item end-->
-    <!-- gallery-item-->
-    <div class="gallery-item" style="padding: 5px">
-      <div class="grid-item-holder">
-        <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-          class="
+  </div>
+  <!-- gallery-item end-->
+  <!-- gallery-item-->
+  <div class="gallery-item" style="padding: 5px">
+    <div class="grid-item-holder">
+      <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+        class="
                                                                   fet_pr-carousel-box-media-zoom
                                                                   popup-image
                                                                 "><i class="fal fa-search"></i></a>
-        <img
-          src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-          alt="" />
-      </div>
+      <img
+        src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+        alt="" />
     </div>
-    <div class="gallery-item">
-      <div class="grid-item-holder">
-        <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-          class="
+  </div>
+  <div class="gallery-item">
+    <div class="grid-item-holder">
+      <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+        class="
                                                                     fet_pr-carousel-box-media-zoom
                                                                     popup-image
                                                                   "><i class="fal fa-search"></i></a>
-        <img
-          src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-          alt="" />
-      </div>
+      <img
+        src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+        alt="" />
     </div>
-
-    
   </div>
 
-  <div class="container">
-    <div class="fl-wrap footer-inner">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="footer-logo">
-            <img src="images/igc-fashion-logo.png" alt="">
-          </div>
-          <div class="footer_text  footer-box fl-wrap">
-            <p>IGC is a fashion and costume label from kampala uganda inspired by African heritage, nature and culture
-              always paired with a forward thinking and a unique design aesthetic.</p>
-          </div>
+
+</div>
+
+<div class="container">
+  <div class="fl-wrap footer-inner">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="footer-header fl-wrap">Contacts</div>
+        <!-- footer-contacts-->
+        <div class="footer-contacts footer-box fl-wrap">
+          <ul>
+            <li><span>Call:</span><a href="tel: +(256)770693987">+(256)750889338
+
+              </a></li>
+            <li><span>Write :</span><a href="mailto: info@igcfashion.co"> info@igcfashion.co</a></li>
+            <li><span>Find us : </span><a href="https://goo.gl/maps/Ku9ogvBxwpLqPCJTA"> Kisaasi, Kampala, Uganda </a>
+            </li>
+          </ul>
         </div>
-        <div class="col-md-4">
-          <div class="footer-header fl-wrap"><span>01.</span> Contacts</div>
-          <!-- footer-contacts-->
-          <div class="footer-contacts footer-box fl-wrap">
-            <ul>
-              <li><span>Call:</span><a href="tel: +(256)770693987">+(256)750889338
-  
-                </a></li>
-              <li><span>Write :</span><a href="mailto: info@igcfashion.co"> info@igcfashion.co</a></li>
-              <li><span>Find us : </span><a href="https://goo.gl/maps/Ku9ogvBxwpLqPCJTA"> Kisaasi, Kampala, Uganda </a>
-              </li>
-            </ul>
-          </div>
-          <!-- footer contacts end -->
-          <a href="mailto:info@igcfashion.co" class="fc_button">Get In Touch <i class="fal fa-envelope"></i></a>
+        <!-- footer contacts end -->
+        <a href="/contacts" class="fc_button">Get In Touch <i class="fal fa-envelope"></i></a>
+      </div>
+      <div class="col-md-4">
+        <div class="footer-logo">
+          <img src="images/igc-fashion-logo.png" alt="">
         </div>
-        <div class="col-md-4">
-          <div class="footer-header fl-wrap"><span>02.</span> Subscribe</div>
-          <div class="footer-box fl-wrap">
-            <p>Want to be notified with our recent and on-going projects. Just sign up and we'll send you a notification
-              by email.</p>
-            <div class="subcribe-form fl-wrap">
-              <form id="subscribe" class="fl-wrap">
-                <input class="enteremail" name="email" id="subscribe-email" placeholder="Your Email" spellcheck="false"
-                  type="text">
-                <button type="submit" id="subscribe-button" class="subscribe-button"> Send <i
-                    class="fal fa-long-arrow-right"></i></button>
-                <label for="subscribe-email" class="subscribe-message"></label>
-              </form>
-            </div>
+        <div class="footer_text  footer-box fl-wrap">
+          <p>IGC is a fashion and costume label from kampala uganda inspired by African heritage, nature and culture
+            always paired with a forward thinking and a unique design aesthetic.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="footer-header fl-wrap">Subscribe</div>
+        <div class="footer-box fl-wrap">
+          <p>Want to be notified with our recent and on-going projects. Just sign up and we'll send you a notification
+            by email.</p>
+          <div class="subcribe-form fl-wrap">
+            <form id="subscribe" class="fl-wrap">
+              <input class="enteremail" name="email" id="subscribe-email" placeholder="Your Email" spellcheck="false"
+                type="text">
+              <button type="submit" id="subscribe-button" class="subscribe-button"> Send <i
+                  class="fal fa-long-arrow-right"></i></button>
+              <label for="subscribe-email" class="subscribe-message"></label>
+            </form>
           </div>
         </div>
       </div>
     </div>
-    <div class="subfooter fl-wrap">
-      <!-- policy-box-->
-      <div class="policy-box">
-        <span>&#169; IGC FASHION 2021 / All rights reserved. </span>
-      </div>
-      <!-- policy-box end-->
-      <a href="#" class="to-top-btn to-top">Back to top <i class="fal fa-long-arrow-up"></i></a>
+  </div>
+  <div class="subfooter fl-wrap">
+    <!-- policy-box-->
+    <div class="policy-box">
+      <span>&#169; IGC FASHION 2023 / All rights reserved. </span>
     </div>
+    <!-- policy-box end-->
+    <a href="#" class="to-top-btn to-top">Back to top<i class="fal fa-long-arrow-up"></i></a>
+    <!-- </div>
       <div class="footer-canvas">
         <div class="dots gallery__dots" data-dots=""></div>
-      </div>
-  </div>
-
+      </div> -->
+</div>
