--- a/views/mistakenfabrics.ejs
+++ b/views/mistakenfabrics.ejs
@@ -134,7 +134,7 @@
                 </div>
             </section>
 
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div> -->
         </div>
         <!--column-wrap-container end-->
     </div>
