--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -23,18 +23,18 @@
     <!--column-wrap--> 
     <div class="column-wrap">
         <!--column-wrap-container -->   
-        <div class="column-wrap-container fl-wrap">
+        <div class="column-wrap-container fl-wrap dark-bg">
             <div class="col-wc_dec">
                 <div class="pr-bg pr-bg-white"></div>
             </div>
             <div class="col-wc_dec col-wc_dec2">
                 <div class="pr-bg pr-bg-white"></div>
             </div>
-            <section  class="small-padding article">
+            <section  class="small-padding article dark-bg">
                 <div class="container">
     
                     <div class="split-sceen-content_title fl-wrap">
-                        <div class="pr-bg pr-bg-white"></div>
+                        <!-- <div class="pr-bg pr-bg-white"></div> -->
                         <h3>
                             Fashion Cyphers</h3>
                     </div>
@@ -87,9 +87,9 @@
                 </div>
             </section>
             <!--section end--> 
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div> -->
             <!--section--> 
-            <section  class="small-padding article">
+            <section  class="small-padding article dark-bg">
                 <div class="container">
                     <div class="split-sceen-content_title fl-wrap">
                         <div class="pr-bg pr-bg-white"></div>
@@ -144,9 +144,9 @@
                 </div>
             </section>
             <!--section end-->        
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div> -->
             <!--section--> 
-            <section  class="small-padding article">
+            <section  class="small-padding article dark-bg">
                     <div class="container">
                         <div class="split-sceen-content_title fl-wrap">
                             <div class="pr-bg pr-bg-white"></div>
@@ -193,9 +193,9 @@
                     </div>
                 </section>
                 <!--section end-->      
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div> -->
             <!--section--> 
-            <section  class="small-padding article">
+            <section  class="small-padding article dark-bg">
                     <div class="container">
                         <div class="split-sceen-content_title fl-wrap">
                             <div class="pr-bg pr-bg-white"></div>
@@ -246,7 +246,7 @@
                     </div>
                 </section>
             <!--section end--> 
-                <div class="section-separator"></div>
+                <!-- <div class="section-separator"></div> -->
            </div>
         <!--column-wrap-container end-->         
     </div>
