--- a/views/workshop.ejs
+++ b/views/workshop.ejs
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="content dark-bg">
     <!--fixed-column-wrap-->
     <div class="fixed-column-wrap">
         <!--fixed-column-wrap-content-->
@@ -24,7 +24,7 @@
     </div>
     <!--fixed-column-wrap end-->
     <!--column-wrap-->
-    <div class="column-wrap">
+    <div class="column-wrap dark-bg">
         <!--column-wrap-container -->
         <div class="column-wrap-container fl-wrap">
             <div class="col-wc_dec">
@@ -118,7 +118,7 @@
                 </div>
             </section>
             <!--section end-->
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div> -->
             <!--section-->
             <section class="small-padding article">
                 <div class="container">
@@ -193,7 +193,7 @@
                 </div>
             </section>
             <!--section end-->
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div> -->
             <!--section-->
             <section class="small-padding article">
                 <div class="container">
@@ -265,9 +265,9 @@
                 </div>
             </section>
             <!--section end-->
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div>
 
-            <div class="section-separator"></div>
+            <div class="section-separator"></div> -->
         </div>
         <!--column-wrap-container end-->
     </div>
