--- a/views/index.ejs
+++ b/views/index.ejs
@@ -119,25 +119,39 @@
                   <div class="close-share-btn" style="opacity: 1; top: 0px; transform: translate3d(0px, 0px, 0px); width: 200px; color: #f76905;">Collections <i class="fal fa-times"></i></div>
                   <div class="collections-container fl-wrap isShare">
                     <a
-                      href="/collections"
+                      href="/mistakenfabricscollection"
                       class="pop share-icon"
-                      style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Metallic_Fabrics</a>
+                      style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Mistaken_Fabrics</a>
                       <a
-                      href="/collections2"
+                      href="/aw19"
+                      class="pop share-icon"
+                      style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">AW19</a>
+                      <a
+                      href="/munsiko"
                       class="pop share-icon"
                       style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Munsiko</a><a
-                      href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Flocalhost%3A3000%2F%23&amp;media=&amp;description="
+                      href="/kampaladisasters"
                       class="pop share-icon"
-                      style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">pin</a><a
-                      href="https://plusone.google.com/_/+1/confirm?hl=en&amp;url=http%3A%2F%2Flocalhost%3A3000%2F%23"
-                      class="pop share-icon"
-                      style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">gg</a><a
-                      href="https://twitter.com/intent/tweet?url=https://igcfashion.co"
+                      style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Kla_Disaster</a><a
+                      href="/kampaladisasters"
                       class="pop share-icon"
                       style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">tw</a><a
                       href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http%3A%2F%2Flocalhost%3A3000%2F%23&amp;title=IGC FASHION&amp;summary=&amp;source=in1.com"
                       class="pop share-icon"
-                      style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"></a></div>
+                      style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"></a>
+                    <a href="/metallicfabrics" class="pop share-icon"
+                      style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Metallic_Fabrics</a>
+                    <a href="/mistakenfabrics" class="pop share-icon"
+                      style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Mistaken_Fabrics</a>
+                    <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Flocalhost%3A3000%2F%23&amp;media=&amp;description="
+                      class="pop share-icon" style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">pin</a><a
+                      href="https://plusone.google.com/_/+1/confirm?hl=en&amp;url=http%3A%2F%2Flocalhost%3A3000%2F%23"
+                      class="pop share-icon" style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">gg</a><a
+                      href="https://twitter.com/intent/tweet?url=https://igcfashion.co" class="pop share-icon"
+                      style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">tw</a><a
+                      href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http%3A%2F%2Flocalhost%3A3000%2F%23&amp;title=IGC FASHION&amp;summary=&amp;source=in1.com"
+                      class="pop share-icon" style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"></a>
+                    </div>
                 </div>
               </ul>
             </nav>
@@ -167,7 +181,7 @@
         </div>
 
         <div class="nav-overlay">
-          <div class="element"> i am sec</div>
+          <div class="element"></div>
         </div>
         <!-- nav-holder end -->
         <!--Content -->
