create share removed

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,9 +29,9 @@
                 <span style="color: #f76905;">IGC FASHION</span>
               </h2>
 
-              <div class="section-title_category">
+              <!-- <div class="section-title_category">
                 <a href="#">CREATE.INSPIRE.SHARE</a> <a href="#">Design</a>
-              </div>
+              </div> -->
             </div>
           </div>
          
