--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,9 +4,10 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="/images/homebanner.jpeg" width="100%" class="d-block w-100" alt="...">
+        <!-- <img src="/images/homebanner.jpeg" width="100%" class="d-block w-100" alt="..."> -->
+        <img src="/images/home.png" width="100%" class="d-block w-100" alt="...">
         <div class="carousel-caption">
-          One Image
+          IGC FASHION
         </div>
       </div>
       <!-- <div class="item active">
@@ -137,6 +138,7 @@
                       ">
   <!-- gallery-item-->
   <div class="gallery-item " style="padding: 5px">
+    <h2>heis</h2>
     <div class="grid-item-holder">
       <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
         class="
