--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,18 +102,18 @@
                 <li>
                   <a href="/" class="act-link">Home</a>
                 </li>
-                <li><a href="about" class="act-link">About</a></li>
+                <li class="showCollections"><a href="#" class="act-link">Collections</a></li>
                 <li><a href="projects" class="act-link">Projects</a></li>
                 <li><a href="events" class="act-link">Events</a></li>
-                <li>
+                <li><a href="about" class="act-link">About</a></li>
+                <!-- <li>
                   <a href="http://shop.igcfashion.co" target="_blank" class="act-link">Shop</a>
-                </li>
+                </li> -->
 
 
                 <!-- <li></li> -->
-                <li class="showCollections"><a href="#" class="act-link">Collections</a></li>
                 <li><a href="contacts" class="act-link">Contact Us</a></li>
-                <li><a href="memberships" class="act-link">Membership</a></li>
+                <!-- <li><a href="memberships" class="act-link">Patron</a></li> -->
                 <!-- collections -->
                 <div class="collections-wrapper" style="transform: matrix(1, 0, 0, 1, 0, 0);">
                   <div class="close-share-btn" style="opacity: 1; top: 0px; transform: translate3d(0px, 0px, 0px); width: 200px; color: #f76905;">Collections <i class="fal fa-times"></i></div>
